# Mine-imator

./: .gitignore  LICENSE  Mine-imator.yyp  README.md
CppGen/: CppGen.sln  gml.json
CppGen/CppGen/: Accessor.cs  CodeObject.cs  CodeWriter.cs  DataType.cs  Expression.cs  ExternalFunction.cs  Function.cs  GML.cs  Object.cs  Program.cs  ResolveScope.cs  Shader.cs  Sprite.cs  Statement.cs  Token.cs  Variable.cs
CppProject/: AppHandler.cpp  AppHandler.hpp  AppWindow.cpp  AppWindow.hpp  BUILD.md  CMakeLists.txt  Common.cpp  Common.hpp  ErrorDialog.cpp  ErrorDialog.hpp  FastVector.hpp  Heap.hpp
CppProject/Asset/: Asset.cpp  Asset.hpp  Buffer.cpp  Buffer.hpp  DataStructure.hpp  Font.cpp  Font.hpp  HashMap.cpp  List.cpp  Map.cpp  Object.cpp  Object.hpp  Scope.hpp  Script.cpp  Script.hpp  Shader.cpp  Shader.hpp  ShaderLoadD3D11.cpp  ShaderLoadOpenGL.cpp  Sound.hpp  SoundInstance.cpp  Sprite.cpp  Sprite.hpp  SpriteFont.cpp  Surface.cpp  Surface.hpp  TextFile.cpp  TextFile.hpp  VertexBuffer.cpp  VertexBuffer.hpp  index.qrc
CppProject/Asset/Shaders/: primitive.fsh  primitive.vsh  shader_add.vsh  shader_alpha_fix.fsh  shader_alpha_fix.vsh  shader_alpha_test.fsh  shader_alpha_test.vsh  shader_blend.fsh  shader_blur.fsh  shader_ca.vsh  shader_clip.fsh  shader_clip.vsh  shader_color_correction.vsh  shader_color_fog.fsh  shader_color_fog.vsh  shader_color_fog_lights.fsh  shader_color_fog_lights.vsh  shader_color_glow.fsh  shader_depth.fsh  shader_depth.vsh  shader_depth_ortho.fsh  shader_depth_point.fsh  shader_draw_texture.fsh  shader_high_bloom_threshold.fsh  shader_high_depth_normal.fsh  shader_high_depth_normal.vsh  shader_high_dof_coc_blur.fsh  shader_high_dof_coc_blur.vsh  shader_high_fog.fsh  shader_high_fog.vsh  shader_high_indirect_blur.vsh  shader_high_light_apply.fsh  shader_high_light_apply.vsh  shader_high_light_point.fsh  shader_high_light_point_shadowless.fsh  shader_high_light_point_shadowless.vsh  shader_high_light_spot.fsh  shader_high_light_sun.fsh  shader_high_lighting_apply.fsh  shader_high_material.vsh  (+40 more)
CppProject/Asset/Shaders/Compiled/: primitive.fsh.d3d  primitive.vsh.d3d  shader_add.fsh.d3d  shader_add.vsh.d3d  shader_alpha_fix.fsh.d3d  shader_alpha_fix.vsh.d3d  shader_alpha_test.fsh.d3d  shader_alpha_test.vsh.d3d  shader_blend.fsh.d3d  shader_blend.vsh.d3d  shader_blur.fsh.d3d  shader_blur.vsh.d3d  shader_border.fsh.d3d  shader_border.vsh.d3d  shader_ca.fsh.d3d  shader_ca.vsh.d3d  shader_clip.fsh.d3d  shader_clip.vsh.d3d  shader_color_camera.fsh.d3d  shader_color_camera.vsh.d3d  shader_color_correction.fsh.d3d  shader_color_correction.vsh.d3d  shader_color_fog.fsh.d3d  shader_color_fog.vsh.d3d  shader_color_fog_lights.fsh.d3d  shader_color_fog_lights.vsh.d3d  shader_color_glow.fsh.d3d  shader_color_glow.vsh.d3d  shader_depth.fsh.d3d  shader_depth.vsh.d3d  shader_depth_ortho.vsh.d3d  shader_depth_point.fsh.d3d  shader_depth_point.vsh.d3d  shader_distort.fsh.d3d  shader_distort.vsh.d3d  shader_draw_texture.fsh.d3d  shader_draw_texture.vsh.d3d  shader_high_bloom_threshold.fsh.d3d  shader_high_bloom_threshold.vsh.d3d  shader_high_depth_normal.fsh.d3d  (+65 more)
CppProject/Gml/: AssetFunc.cpp  AudioFunc.cpp  BufferFunc.cpp  CameraFunc.cpp  DataStructureFunc.cpp  DateFunc.cpp  DrawFunc.cpp  FileFunc.cpp  InputFunc.cpp  MathFunc.cpp  RenderFunc.cpp  StringFunc.cpp  UtilFunc.cpp  WindowFunc.cpp
CppProject/Render/: Bounds.cpp  Bounds.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GLWidget.cpp  GLWidget.hpp  GraphicsApiHandler.cpp  GraphicsApiHandler.hpp  Matrix.cpp  Matrix.hpp  Mesh.cpp  Mesh.hpp  PrimitiveRenderer.cpp  PrimitiveRenderer.hpp  Texture.cpp  Texture.hpp  TexturePage.cpp  TexturePage.hpp  Vertex.cpp  Vertex.hpp  VertexBufferRenderer.cpp  VertexBufferRenderer.hpp
CppProject/Type/: ArrType.cpp  ArrType.hpp  MatrixType.cpp  MatrixType.hpp  StringType.cpp  StringType.hpp  VarType.cpp  VarType.hpp  VarTypeIntOp.cpp  VarTypeRealOp.cpp  VarTypeStringOp.cpp  VarTypeVarOp.cpp  VecType.cpp  VecType.hpp
CppProject/World/: BlockStyle.cpp  Builder.cpp  Chunk.cpp  GZIP.cpp  GZIP.hpp  Import.cpp  NBT.cpp  NBT.hpp  Preview.cpp  Region.cpp  RegionLoader.cpp  Section.cpp  World.cpp  World.hpp  WorldBox.cpp  WorldVertex.cpp
GmProject/: Mine-imator.yyp
Installer/: Shipping.txt
Installer/Linux/: UpdateApp.sh
Installer/Mac/: UpdateApp.sh
Installer/Windows/: UpdateApp.ps1  license.txt  setup.iss
installer/: license.txt  setup.iss
views/: 00fea57e-ac6e-46a4-947f-35616fcabf1e.yy  01171463-322c-4e57-a352-932b7c5fd034.yy  032f02d4-8c78-4b7c-8624-88b25cc7a627.yy  041d80ee-db48-42cc-b379-694cf76c82e0.yy  05488b28-518b-4e4b-9d66-5556035ca5fb.yy  05d6b52d-2e9d-4984-a447-3141fe76a556.yy  06196e5d-ad9e-4c7a-906e-2dc2e1441c9a.yy  073a3344-f0d6-4e48-90d8-044a811ea449.yy  073e2afc-b6e3-4e5c-a66d-a1d6c371b618.yy  0814da2a-fe84-4d0c-b4f6-4260f8a51397.yy  08311458-c8c8-498a-bfcc-505983ea0f37.yy  0834045b-2f42-4b13-9977-d8d1f91c3b99.yy  097b13e3-f643-4d84-b2a7-715c0c26d010.yy  0bbcfa9c-5a96-47af-84ba-c560389e5470.yy  0bf6dedb-b2d9-4e8a-be37-a002170dea7f.yy  0c09c614-3ce6-475c-b262-1300ad293171.yy  0ca9547b-ae1f-4bb0-983a-db3ac30e07e1.yy  0cbda60e-bd19-473c-8d34-a2b3091ab955.yy  0d3aa3a4-3057-4fd3-aa9c-a4f964963233-DESKTOP-CHLBQMA.yy  0d3aa3a4-3057-4fd3-aa9c-a4f964963233.yy  0e1119d9-1099-4b62-98ed-3619a4bc55af.yy  0e6a24b2-5029-457d-b4f4-49703cefa592.yy  0fbd40da-932c-4093-8a8d-113305f3545d.yy  100973df-4bfa-49df-a1fb-b4bfef5328cb.yy  11451b8f-1930-4c5c-b70d-c5609b668302-DESKTOP-CHLBQMA.yy  11451b8f-1930-4c5c-b70d-c5609b668302.yy  114e73ae-2679-41a8-8953-e80f6087f49d.yy  117b5177-d20b-4256-92be-55e3fadfa968.yy  146aad00-2d87-45bd-8af5-37119bb29c18.yy  17b9ab69-5c6f-43a6-83f1-00409ff9c7b9.yy  18a278f3-f190-4818-9e03-325208025f06.yy  1920b208-1b28-4e71-b570-34952a8217f3.yy  1a3a8d72-5527-4015-b3b0-f2089f87a503.yy  1a676e51-60c8-4cd5-a83c-0739f63c9dc0.yy  1b49a122-66f1-4043-922b-5deeec1cb200.yy  1be7fcd3-f9a2-4e4b-aa68-c3f24c9abc9a.yy  1cc8863b-cba2-45c2-954e-a932b5dd3de4.yy  1cd9317a-132f-422e-a5ba-83c85759157c.yy  1dba6c36-13cb-43cb-91b6-6e40d29a403b.yy  1e2484c6-58c1-45fd-9cd1-30ffc50b3653.yy  (+313 more)
(+10093 files in other folders)
